# interpretability

./: .gitignore  README.md  hello.py  instructions.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
aieng-interp-utils/: README.md  pyproject.toml
aieng-interp-utils/aieng/: __init__.py
aieng-interp-utils/aieng/interp/: __init__.py
aieng-interp-utils/aieng/interp/data/: __init__.py  loaders.py  preprocessing.py
aieng-interp-utils/aieng/interp/models/: __init__.py  pytorch.py
aieng-interp-utils/aieng/interp/visualization/: __init__.py  metrics.py
configs/: config.yaml  nam.yaml
data/: __init__.py  class_prompts.py  config.py  data_utils.py  imaging_dataset.py  multimodal_dataset.py  us_130_new_data.py
implementations/Intepretable-models/: README.md
implementations/Post-hoc/: README.md
implementations/Post-hoc/LIME/: README.md  lime-jupyter.ipynb  lime_oi.html  oi.html
implementations/Post-hoc/SHAP/: README.md  shap-jupyter.ipynb  shap-nn-jupyter.ipynb
implementations/Post-hoc/acc_local_effects/: README.md  ale-jupyter.ipynb
implementations/Post-hoc/counterfactual/: Counter_imaging.ipynb  Counter_tabular.ipynb  README.md
implementations/Post-hoc/integrated_gradients/: README.md  ig-imaging-jupyter.ipynb  ig-tabular.ipynb
implementations/Post-hoc/partial_dependence_plots/: README.md  pdp-jupyter.ipynb
interp/: __init__.py  metrics.py  visualize.py  vizualize.py
interp/models/: __init__.py  nam.py  protonet.py  resnet_attention.py  resnetattention.py
reference_implementations/: config_example.py
reference_implementations/Intepretable-models/: README.md
reference_implementations/Intepretable-models/EBM/: EBM-jupyter.ipynb
reference_implementations/Post-hoc/: README.md
reference_implementations/Post-hoc/LIME/: LIME-jupyter.ipynb  README.md  finalized_model.sav  lime-jupyter.ipynb  oi.html
reference_implementations/Post-hoc/SHAP/: README.md  shap-jupyter.ipynb  shap-nn-jupyter.ipynb  shapp-nn-jupyter.ipynb
reference_implementations/Post-hoc/acc_local_effects/: ALE-jupyter.ipynb  ale-jupyter.ipynb
reference_implementations/US_130/: losses.py  model.py
reference_implementations/imaging/: losses.py  model.py  posthoc_explanations.py  utils.py  zeroshot.py  zeroshot_utils.py
reference_implementations/ssl/: model.py  tabnet.py
scripts/: main.py  main_ssl.py  main_tabnet.py  main_zeroshot.py  new_script.sh  new_script_ssl.sh  scripts.md  train_nam.sh  train_nih.py  train_nih.sh  train_protop.sh  us_130_main.py  us_130_trad_model.py
utils/: __init__.py  model_utils.py
(+162 files in other folders)
