[project]
name = "interpretability-bootcamp"
version = "0.1.0"
description = "AI Interpretability Bootcamp - Vector Institute"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "captum>=0.7.0",
    "interpret>=0.6.9",
    "jupyter>=1.1.1",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.0",
    "notebook>=7.3.2",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pyale>=1.2.0",
    "pygam>=0.9.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.46.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchxrayvision>=1.3.2",
    "tqdm>=4.67.1",
    "transformers>=4.48.2",
    "xgboost>=2.1.3",
    "xlrd>=2.0.1",
]

[tool.setuptools]
packages = ["data", "interp", "reference_implementations","scripts"]
