[project]
name = "aieng-interp-utils"
version = "1.0.0"
description = "Helper modules for AI Engineering Interpretability Bootcamp implementations"
authors = [{name = "Vector AI Engineering", email = "ai_engineering@vectorinstitute.ai"}]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "captum>=0.7.0",
    "dice-ml>=0.9",
    "interpret>=0.6.9",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.0",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.46.0",
    "torch>=2.6.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["aieng/"]

[tool.hatch.build.targets.wheel]
include = ["aieng/"]
